# sing-box-gui

./: bun.lockb  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cfg.rs  lib.rs  main.rs  setting.rs  sing_box.rs
src-tauri/src/controller/: cfg.rs  mod.rs  setting.rs  sing_box.rs
src-tauri/src/gui/: auto_launch.rs  mod.rs  tray.rs  window.rs
src-tauri/src/handler/: mod.rs  sing_box_core.rs
src-tauri/src/service/: mod.rs  sing_box_file.rs
src-tauri/src/utils/: github.rs  mod.rs  network.rs
src/components/: Menu.tsx  ThemeToggle.tsx  TitleBarButton.tsx  app-header.tsx  app-sidebar.tsx  icon.tsx  nav-main.tsx  settings-form.tsx  title-bar-button.tsx
src/components/ui/: sidebar.tsx
src/pages/: Home.tsx  Settings.tsx
src/providers/: LayoutProvider.tsx  ThemeProvider.tsx
src/stores/: useMaximizableStore.tsx  useSettingStore.tsx  useStore.tsx  useThemeStore.tsx
