[package]
name = "sing-box-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sing_box_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon"]  }
tauri-plugin-opener = "2.2.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
anyhow = { version = "1.0.95" }
reqwest = { version = "0.12.10", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration", "rustls-tls"
] }
tracing = { version = "0.1.41", features = ["log"] }
tokio = { version = "1.42.0", features = ["full"] }
dirs = "5.0.1"
toml = "0.8.19"
arc-swap = "1.7.1"
config = { version = "0.15.4", features = ["async"] }
tracing-subscriber = "0.3.19"
actix = "0.13.5"
privilege = "0.3.0"
redb = "2.3.0"
bincode = "1.3.3"
tracing-appender = "0.2.3"



